Portfolio Page Mobile and Desktop Version Completed

--- a/Portfolio-Page-Desktop-Mobile/Portfolio/index.html
+++ b/Portfolio-Page-Desktop-Mobile/Portfolio/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@700&family=Work+Sans:wght@700&family=Work+Sans:wght@400" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -18,9 +17,9 @@
             <div class="navbar">           
                 <img src="images/ic-logo.svg" alt="" >
                 <input type="checkbox" id="check">
-            <label for="click" class="menu-btn">
-            <i class="fa fa-bars"></i>   
-            </label>                          
+                 <label for="click" class="menu-btn">
+                      <i class="fa fa-bars"></i>   
+                 </label>                          
                 <ul>  
                     <li><a href="#home" >Home</a></li>
                     <li><a href="#Portfolio">Portfolio</a></li>
@@ -41,8 +40,8 @@
             </div>
             <div class="container">
                 <div class="bg-image">
-                    <img src="images/dscdscd 1.svg" alt="img1">
-                    <img src="images/cd-img.svg" alt="img2">
+                    <img src="images/cd-image2.svg" alt="img1">
+                    <img src="images/cd-img.png" alt="img2">
                 </div>
                 <div class="bg-image">
                     <img src="images/cd-img1.svg" alt="img1">
@@ -53,8 +52,8 @@
                     <img src="images/cd-img4.svg" alt="img2">
                 </div>
                 <div class="bg-image">
-                    <img src="images/dscdsc 1.svg" alt="img1">
-                    <img src="images/5175975 1.png" alt="img2">
+                    <img src="images/cd-image1.svg" alt="img1">
+                    <img src="images/cd-image3.png" alt="img2">
                 </div>
             </div>      
       <div class="button">
