Home Page Mobile and Desktop Version Integrated

--- a/Home page/home.html
+++ b/Home page/home.html
@@ -12,15 +12,14 @@
 </head>
 <body>
     <header>
-        <div class="nav-header">
-            <section class="container-desk">    
-            <div class="navbar">           
+        <div class="Nav-header">
+            <section class="Container-desk">    
+            <div class="Navbar">           
                 <img src="images/ic-logo.svg" alt="" > 
                 <input type="checkbox" id="check">
-                <label for="click" class="menu-btn">
+                <label for="click" class="Menu-btn">
                      <i class="fa fa-bars"></i>
-                </label>                          
-               <ul>             
+                </label>                                      
                      <ul>
                         <li><a href="">Home</a></li>                
                         <li><a href="">Portfolio</a></li>                   
@@ -28,21 +27,20 @@
                         <li><a href="">Contact</a> </li>                 
                      </ul>              
             </div>
-                <div class="row"> 
-                    <div class="right">
+                <div class="Row"> 
+                    <div class="Right">
                         <p>WELCOME</p><br>
                         <h1>Lorem ipsum dolor sit<br>
                             amet consectetur </h1><br>
                             <h6> Lorem ipsum, dolor sit amet consectetur adipisicing<br>
                                  elit. Suscipit nemo hic quos, ab, dolor aperiam nobis 
                                  <br> est eos error ipsum, voluptate culpa nesciunt<br> delectus iste?</h6>
-                        
-                                 <div class="button">
+                                 <div class="Button">
                                     <button type="submit" class="btn">Explore</button>
                                   </div>
                     </div>
-                    <div class="left">
-                        <div class="logo">
+                    <div class="Left">
+                        <div class="Logo">
                         <img src="images/bggroup1.svg" alt="">
                         </div>
                     </div>
@@ -50,15 +48,15 @@
         </section>
          </div>
     </header>
-    <section class="container-desk">
+    <section class="Container-desk">
         <section>
-        <div class="about">
+        <div class="About">
                 <div>
                     <h2>PARTNERS</h2>  
                     <h1>Lorem Ipsum Dolor</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur <br>adipiscing elit.</p>
                 </div>
-                <div class="social">
+                <div class="Social">
                     <img src="images/sc-icon1.svg" alt="">
                     <img src="images/sc-icon2.svg" alt="">
                     <img src="images/sc-icon3.svg" alt="">
@@ -71,12 +69,12 @@
         </div>
         </section>
         <section>
-            <div class="img-left">
-                <div class="row">
-                    <div class="leftsideimg">
+            <div class="Img-left">
+                <div class="Row">
+                    <div class="Leftsideimg">
                         <img src="images/left-img.svg" alt="">
                     </div>  
-                        <div class="leftside">
+                        <div class="Leftside">
                             <h1>Lorem ipsum dolor sit <br>amet consectetur</h1><br>
                             <h6 >Lorem ipsum, dolor sit amet consetur adipisicing elit.<br>
                                  Suscipit nemo hic quos, dolor aperiam nobis cum est<br>
@@ -89,9 +87,9 @@
             </div>
     </section>
      <section>
-        <div class="img-right">
-            <div class="row">            
-                <div class="rightside">
+        <div class="Img-right">
+            <div class="Row">            
+                <div class="Rightside">
                     <h1>Lorem ipsum dolor sit <br>amet consectetur</h1><br>
                     <h6 >Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br>
                         Suscipit nemo hic quos, ab, dolor aperiam nobis cum est<br>
@@ -100,7 +98,7 @@
                             <button type="submit" class="btn">Learn More</button>
                         </div>
                 </div>
-                <div class="rightsideimg">
+                <div class="Rightsideimg">
                     <img src="images/right-img.svg" alt="">
                 </div>   
             </div>  
@@ -108,60 +106,60 @@
      </section>
      <section>
         <div class="Cards">
-                <div class="head">
+                <div class="Head">
                     <h2>TEAM</h2>  
                     <h1 class="">Our Talents</h1>
                     <p>Lorem ipsum dolor sit amet consectetur <br> Suscipit nemo hic quos elit.</p>
                 </div>
-                <div class="row">               
-                    <div class="main">
-                        <div class="card ">
-                          <div class="card-body">
+                <div class="Row">               
+                    <div class="Main">
+                        <div class="Card ">
+                          <div class="Card-body">
                             <img src="images/crad3.png">
-                            <h3 class="card-title ">Peg Legge</h3>
-                            <p class="text">CEO</p>
+                            <h3 class="Card-title ">Peg Legge</h3>
+                            <p class="Text">CEO</p>
                             </div>                      
                          </div>
                     </div>
-                    <div class="main">
-                        <div class="card">
-                          <div class="card-body ">
+                    <div class="Main">
+                        <div class="Card">
+                          <div class="Card-body ">
                             <img src="images/card2.png">
-                            <h3 class="card-title ">Richard Guerra</h3>
-                            <p class="text">CTO</p>
+                            <h3 class="Card-title ">Richard Guerra</h3>
+                            <p class="Text">CTO</p>
     
                             </div>
                          </div>
                     </div>
-                    <div class="main">
-                        <div class="card ">
-                          <div class="card-body ">
+                    <div class="Main">
+                        <div class="Card ">
+                          <div class="Card-body ">
                             <img src="images/crad3.png">
-                            <h3 class="card-title ">Alexandra stolz</h3>
-                            <p class="text">DESIGNER</p>    
+                            <h3 class="Card-title ">Alexandra stolz</h3>
+                            <p class="Text">DESIGNER</p>    
                             </div>
                          </div>
                     </div>
-                    <div class="main">
-                        <div class="card ">
-                          <div class="card-body ">
+                    <div class="Main">
+                        <div class="Card ">
+                          <div class="Card-body ">
                             <img src="images/card4.png">
-                            <h3 class="card-title ">Janet bray</h3>
-                            <p class="text">DEVELOPER</p>
+                            <h3 class="Card-title ">Janet bray</h3>
+                            <p class="Text">DEVELOPER</p>
                             </div>
                          </div>
                     </div>
                 </div>
-                <div class="button">
+                <div class="Button">
                    <button type="submit" class="btn">Learn More</button>
                  </div>    
         </div>   
      </section>
     </section>
  <footer>
-        <section class="container-desk">
-        <div class="row">
-            <div class="icons col-6">
+        <section class="Container-desk">
+        <div class="Row">
+            <div class="Icons col-6">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
                 <i class="fa fa-instagram" aria-hidden="true"></i>
                 <i class="fa fa-twitter"></i>
@@ -169,7 +167,7 @@
                 <i class="fa fa-whatsapp"></i>
                 <i class="fa fa-youtube-play" aria-hidden="true"></i>
             </div>
-            <div class="copyright">
+            <div class="Copyright">
                 <p>© Start, 2022. All rights reserved.</p>
             </div>       
         </div>
